fix: fix input field from overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,9 @@ button {
 }
 
 .container {
-    border: 5px solid black;
     padding: 0.5rem;
+    align-items: center;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 #input-field,
@@ -52,12 +53,12 @@ button {
 }
 
 #input-field {
-    padding: 1rem 0;
     text-align: end;
+    max-width: 100%;
     height: 10rem;
-    /* width: 100%; */
     font-size: 30px;
     font-weight: bold;
+    overflow: hidden;
 }
 
 .keypad button {
